Added in or faceting for individual panl/solr fields

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -92,7 +92,7 @@ solr.default.query.operand=+
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-solr.facet.min.count=1
+solr.facet.min.count=0
 solr.numrows=10
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -174,11 +174,11 @@ panl.type.i=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
 panl.facet.b=brand
+panl.or.facet.b=true
 panl.name.b=Brand
 panl.type.b=solr.StrField
 panl.prefix.b=Manufactured by
 panl.suffix.b=\ Company
-panl.or.b=true
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
 panl.field.N=name
