Added in copyright

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -45,19 +45,19 @@
 #
 # definitions, else a FATAL encoding error will occur and the server will not
 # be started.  This defaults to a single character if not set - i.e.
-#   panl.lpse.num=1
+#   panl.lpse.length=1
 #
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.num=1
+panl.lpse.length=1
 
 #                                Panl Metadata
 #                                ---- --------
 # The following are considered metadata that changes what results are returned
 # and in what format.  These are not considered facets, however they do need to
-# be the same size as the panl.lpse.num property above.  These define what the
-# query parameter will be and __MUST NOT__ be the same as any of the facets
+# be the same size as the panl.lpse.length property above.  These define what
+# the query parameter will be and __MUST NOT__ be the same as any of the facets
 
 panl.param.query=q
 panl.param.sort=s
@@ -133,7 +133,7 @@ solr.numrows.default=10
 #
 # where:
 #       <code> is the LPSE code and __MUST__ be the same length as the
-#              panl.lpse.num
+#              panl.lpse.length
 # <solr_field> is the solr field name which __MUST__ map to the Solr field
 #              name in the configuration file
 # <field_name> is the name of the facet in a more human friendly version, will
@@ -153,7 +153,7 @@ solr.numrows.default=10
 #
 # where:
 #       <code> is the LPSE code and __MUST__ be the same length as the
-#              panl.lpse.num
+#              panl.lpse.length
 #     <prefix> is the text that will be prefixed before the selected facet in
 #              the URI
 #     <suffix> is the text that will be suffixed after the selected facet in
