Clean up of documentation

--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -1,54 +1,77 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
-#              LAST PAGE SEGMENT ENCODING (LPSE) CONFIGURATION
-#              ---- ---- ------- -------- ------ -------------
-#
-# It uses (L)ast (P)ath (S)eparator (E)ncoding which will use the URI path and
-# convert it to a Solr search query.  An LPSE encoded URI path will be of the
-# following format:
-#
-#   /something/something-else/se/
-#
-# rather than ?firstfield=something&secondfield=something-else
-#
-# The following characters may be used in the url for the encoding of the
-# facets and queries.
-#
-#        A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
-#        a b c d e f g h i j k l m n o p q r s t u v w x y z
-#        0 1 2 3 4 5 6 7 8 9
-#
-# The following are reserved characters and __MUST__ not be used as they are
-# modifiers that the Panl server users
-#
-#        + - .
-#                                ~ ~ ~ * ~ ~ ~
-#
-#   NOTE: The Panl server will not enforce the above two rules.  If either the
-#         reserved characters, or a character outside of the allowable encoding
-#         characters, then the Panl server may return erroneous, or a 500
-#         internal server error.
-#
-#                                ~ ~ ~ * ~ ~ ~
-#
-# The following configuration values determine how the LPSE is configured.  The
-# LPSE is made up of the following types:
-#     - query term parameter - the actual query entered by the user of the site
-#     - facet parameters - used to refine/narrow the search query term
-#     - SOLR configuration - used to change how the results are displayed - e.g.
-#       sort order, number of results per page and page number
-#     - facet modifiers - used to modify the way in which facets are utilised
-#
-# First up, the number of characters that are used for encoding of a particular
-# parameter must be set.  This number must then also match all the
-#   solr.field.*
-#
-# definitions, else a FATAL encoding error will occur and the server will not
-# be started.  This defaults to a single character if not set - i.e.
-#   panl.lpse.length=1
-#
-#
+#                                              __                             #
+#                          .-----.---.-.-----.|  |                            #
+#                          |  _  |  _  |     ||  |                            #
+#                          |   __|___._|__|__||__|                            #
+#                          |__|                                               #
+#                                                                             #
+#                                                                             #
+#         COLLECTION LAST PAGE SEGMENT ENCODING (LPSE) CONFIGURATION          #
+#         ---------- ---- ---- ------- -------- ------ -------------          #
+#                                                                             #
+# This file configures the collection and field sets that connect to the Solr #
+# server.                                                                     #
+#                                                                             #
+#                                                                             #
+# It uses (L)ast (P)ath (S)eparator (E)ncoding which will use the URI path    #
+# and convert it to a Solr search query.  An LPSE encoded URI path will be of #
+# the following format:                                                       #
+#                                                                             #
+#   /something/something-else/se/                                             #
+#                                                                             #
+# rather than ?firstfield=something&secondfield=something-else                #
+#                                                                             #
+# The following characters may be used in the url for the encoding of the     #
+# facets and queries.                                                         #
+#                                                                             #
+#        A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                  #
+#        a b c d e f g h i j k l m n o p q r s t u v w x y z                  #
+#        0 1 2 3 4 5 6 7 8 9                                                  #
+#                                                                             #
+# The following are reserved characters and __MUST__ not be used as they are  #
+# modifiers that the Panl server users.                                       #
+#                                                                             #
+#        + - .                                                                #
+#                                ~ ~ ~ * ~ ~ ~                                #
+#                                                                             #
+#   NOTE: The Panl server will not enforce the above two rules.  If either    #
+#         the reserved characters, or a character outside of the allowable    #
+#         encoding characters, then the Panl server may return erroneous, or  #
+#         a 500 internal server error.                                        #
+#                                                                             #
+#                                ~ ~ ~ * ~ ~ ~                                #
+#                                                                             #
+# The following configuration values determine how the LPSE is configured.    #
+# The LPSE is made up of the following types:                                 #
+#     - query term parameter - the actual query entered by the user of the    #
+#         site                                                                #
+#     - facet parameters - used to refine/narrow the search query term        #
+#     - SOLR configuration - used to change how the results are displayed     #
+#         for example:                                                        #
+#           sort order,                                                       #
+#           number of results per page,                                       #
+#           and page number                                                   #
+#     - facet modifiers - used to modify the way in which facets are utilised #
+#                                                                             #
+# First up, the number of characters that are used for encoding of a          #
+# particular parameter must be set.  This number must then also match the     #
+# length of the codes assign to:                                              #
+#     panl.facet.*                                                              #
+#   panl.field.*                                                              #
+#                                                                             #
+# definitions, else a FATAL encoding error will occur and the server will not #
+# be started.  This defaults to a single character if not set - i.e.          #
+#     panl.lpse.length=1                                                        #
+#                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+#                                Panl LPSE Length
+#                                ---- ---- ------
+# The length (or number of characters) for each of the LPSE codes for the
+# facet field codes and normal field codes.  This length does not apply to
+# the Panl parameters
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 $panl.lpse.length
 
@@ -56,8 +79,10 @@ $panl.lpse.length
 #                                ---- --------
 # The following are considered metadata that changes what results are returned
 # and in what format.  These are not considered facets, however they do need to
-# be the same size as the panl.lpse.length property above.  These define what the
-# query parameter will be and __MUST NOT__ be the same as any of the facets
+# be the same size as the panl.lpse.length property above.  These define what
+# the query parameter will be and __MUST NOT__ be the same as any of the facets
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 $panl.param.query
 $panl.param.sort
@@ -75,7 +100,10 @@ $panl.param.passthrough
 #
 # The default value for this property is false, so you do not need to include
 # it unless you wish to enable this feature, i.e.
-#   panl.include.single.facets=true
+#
+#     panl.include.single.facets=true
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 panl.include.single.facets=false
 
@@ -83,53 +111,93 @@ panl.include.single.facets=false
 #                    ------- -- ------- ---- ------ ------
 # Facets that include the same number of results as the number of found
 # documents will not be included by default.  The reasoning behind this is that
-# if by using this facet, you will get exactly the same results, then this is
+# if, by using this facet, you will get exactly the same results, then this is
 # not a refinement of the query at all, it will simply return the same set of
 # results, just with a longer LPSE URI.
 #
 # The default value for this property is false, so you do not need to include
 # it unless you wish to enable this feature, i.e.
-#   panl.include.same.number.facets=true
+#
+#     panl.include.same.number.facets=true
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 panl.include.same.number.facets=false
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                         The Default Query Operand
+#                         --- ------- ----- -------
+# This maps to the Solr q.op parameter, by default it is OR (the '-') character
+# - i.e. the search query will need to be in one of the search fields.
 #
-# These are default values which need to be present, however they may be changed
-# to something a little nicer if desired
+# This value can also be changed per request with the LPSE encoded parameter
+# see the property:
+#
+#    panl.param.query.operand
 #
 # This __MUST__ be either a +, or a -
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                ~ ~ ~ * ~ ~ ~
 
-solr.default.query.operand=+
+solr.default.query.operand=-
 
-# need to add this - this is not a required parameter - hte default is 100 which
-# is set by solr
+#           The Default Maximum Number Of Facet Values To Return
+#           --- ------- ------- ------ -- ----- ------ -- ------
+# This is not a required property, the default set by Solr is 100, you may
+# change this to any positive integer vale.
+#
+#                                ~ ~ ~ * ~ ~ ~
+
 solr.facet.limit=100
 
-
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                        The Minimum Facet Value Count
+#                        --- ------- ----- ----- -----
+# If the query would return a facet with a count value less than this amount,
+# then it will not be returned.
 #
-# SOLR configuration variables
-#  solr.facet.min.count - the minimum number of items within each facet before
-#      the facet will be returned
-#  solr.numrows - the default number of rows (i.e. documents to return for any
-#      query)
+# The reasoning for this, is that if you were to choose this facet, the results
+# are guaranteed to return zero rows - therefore useless.
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                ~ ~ ~ * ~ ~ ~
+#
+# IMPORTANT: If you have a 'facet OR' enabled for one or more of the facet
+#            fields, then you __MUST__ set this to 0 (zero) to ensure that the
+#            correct facets are returned.
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 solr.facet.min.count=1
+
+#               The Default Number of Rows (Documents) To Return
+#               --- ------- ------ -- ---- ----------- -- ------
+# The Solr default is 10 documents to be returned, however, this may be set to
+# any positive integer value.
+#
+# This value can also be changed per request with the LPSE encoded parameter
+# see the property:
+#
+#    panl.param.numrows
+#
+#                                ~ ~ ~ * ~ ~ ~
+#
+# IMPORTANT: If you have a 'facet OR' enabled for one or more of the facet
+#            fields, then you __MUST__ set this to 0 (zero) to ensure that the
+#            correct facets are returned.
+#
+# SOLR configuration variables
+#     solr.facet.min.count - the minimum number of items within each facet before
+#         the facet will be returned
+#     solr.numrows.defaulr - the default number of rows (i.e. documents to return
+#         for any query)
+#
+#                                ~ ~ ~ * ~ ~ ~
+
 solr.numrows.default=10
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
 #                             Panl Facet Configuration
 #                             ---- ----- -------------
-#
 # The panl facets that are in use by this collection.  The format is:
-#   panl.facet.<code>=<solr_field>
-#   panl.name.<code>=<field_name>
+#     panl.facet.<code>=<solr_field>
+#     panl.name.<code>=<field_name>
 #
 # where:
 #       <code> is the LPSE code and __MUST__ be the same length as the
@@ -148,8 +216,8 @@ solr.numrows.default=10
 # query to the Solr server
 #
 # The format is:
-#   panl.prefix.<code>=<prefix>
-#   panl.suffix.<code>=<suffix>
+#     panl.prefix.<code>=<prefix>
+#     panl.suffix.<code>=<suffix>
 #
 # where:
 #       <code> is the LPSE code and __MUST__ be the same length as the
@@ -162,14 +230,14 @@ solr.numrows.default=10
 # As an example, should you have a manufacturer facet (LPSE code 'm') value of
 # 'ACME Incorporated' with the following properties set:
 #
-#   panl.prefix.m=Manufactured by
-#   panl.suffix.m= // a fine company
+#     panl.prefix.m=Manufactured by
+#     panl.suffix.m=\ // a fine company
 #
 # The non-suffixed, non-prefixed URI encoding would be:
-#   /ACME Incorporated/m/
+#     /ACME Incorporated/m/
 #
 # Post processing, the URI would be the following:
-#   /Manufactured by ACME Incorporated // a fine company/m/
+#     /Manufactured by ACME Incorporated // a fine company/m/
 #
 #                                ~ ~ ~ * ~ ~ ~
 #
@@ -187,19 +255,17 @@ solr.numrows.default=10
 #
 # You may return additional fields with a query that are either faceted or not
 # and is defined in the
-#   panl.results.fields.*
+#
+#     panl.results.fields.*
 #
 # properties towards the bottom of this file
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                ~ ~ ~ * ~ ~ ~
 
 $panl.lpse.fields
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
 #                        Panl LPSE Order Configuration
 #                        ---- ----- ----- -------------
-#
 # This is the order in which the URL will be generated, the default order
 # generated by panl generate is the order in which the fields were defined in
 # the solr managed-schema.xml file and will almost certainly not be the order
@@ -208,27 +274,24 @@ $panl.lpse.fields
 # NOTE: all defined panl facet fields must be represented here, and the
 # recommendation is to have the properties in the following order:
 #
-#   panl.param.passthrough
+#     panl.param.passthrough
 #
 #   ... all the other LPSE codes ...
 #
-#   panl.param.query
-#   panl.param.page
-#   panl.param.numrows
-#   panl.param.sort
-#   panl.param.query.operand
+#     panl.param.query
+#     panl.param.page
+#     panl.param.numrows
+#     panl.param.sort
+#     panl.param.query.operand
 #
 # Of course, you are welcome to change this.
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                ~ ~ ~ * ~ ~ ~
 
 $panl.lpse.order
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
-#
 # Below are the fields that are configured to be returned for the query, these
 # fields are added to the query and must match the solr fields.
 #
@@ -237,16 +300,23 @@ $panl.lpse.order
 # the fields that are stored by the solr engine.
 #
 # As an example, another property:
-#   panl.results.fields.firstfive
+#
+#     panl.results.fields.firstfive
 #
 # was also automatically generated with only the first five fields.  You may
 # rename, delete or add any of the results fields as you wish (remembering that
 # the default 'all' will __ALWAYS__ exist, even if it is not defined in this
 # file).
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                ~ ~ ~ * ~ ~ ~
 
 $panl.results.fields.all
 $panl.results.fields.firstfive
 
+#                      Panl Sort Field Configuration
+#                      ---- ---- ----- -------------
+# Below are the fields that are configured to be able to be sorted on, these
+# fields must either be defined as a panl.facet or a panl.field
+#
+#                                ~ ~ ~ * ~ ~ ~
 panl.sort.fields=
