--- a/src/main/resources/panl.template.properties
+++ b/src/main/resources/panl.template.properties
@@ -1,21 +1,22 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
-#                   SOLR SERVER CONNECTION CONFIGURATION
-#                   ---- ------ ---------- -------------
-# This is the panl configuration file which defines how panl will interact with
-# the Solr server.
-#
-# need the solr server location
-#   solr.search.server.url - the search server URL to connect to which must
-#       NOT include the core that it is connecting to - this will be taken
-#       care of by the panl request mechanism.
-#       NOTE that if you are using connector that has multiple URLs, then
-#       they MUST be comma separated.
-#
-# We also need to know how to connect to the Solr Server
-#   solrj.client - The SolrJ Connector to use
-#
-#                                ~ ~ ~ * ~ ~ ~
+#                                              __                             #
+#                          .-----.---.-.-----.|  |                            #
+#                          |  _  |  _  |     ||  |                            #
+#                          |   __|___._|__|__||__|                            #
+#                          |__|                                               #
+#                                                                             #
+#                PANL/SOLR SERVER CONNECTION CONFIGURATION                    #
+#                --------- ------ ---------- -------------                    #
+#                                                                             #
+# This is the Panl configuration file which configures the base functionality #
+# and defines how Panl will connect to the Solr server.                       #
+#                                                                             #
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+#                            Which Solr Client To Use
+#                            ----- ---- ------ -- ---
+# Choose the correct SolrJ client for the Solr installation that you require,
+# by default, it is the CloudSolrClient.
 #
 # NOTE: What the solr.search.server.url will be will depend on the client that
 #       you choose.  The SolrJ client __MUST__ be one of
@@ -25,38 +26,37 @@
 #  - LBHttp2SolrClient
 #  - CloudSolrClient
 #
-#                                ~ ~ ~ * ~ ~ ~
-#
 # By default - we will be using the CloudSolrClient as it works with the
 # example instructions for spinning up a test solr instance
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-
-#                            Which Solr Client To Use
-#                            ----- ---- ------ -- ---
-# Choose the correct SolrJ client for the Solr installation that you require,
-# by default, it is the CloudSolrClient.
-#
-#   solrj.client=CloudSolrClient
+#                                ~ ~ ~ * ~ ~ ~
 
 #solrj.client=Http2SolrClient
 #solrj.client=HttpJdkSolrClient
 #solrj.client=LBHttp2SolrClient
 solrj.client=CloudSolrClient
 
-#                            Which Solr Client To Use
-#                            ----- ---- ------ -- ---
-# Choose the correct SolrJ client for the Solr installation that you require,
-# by default, it is the CloudSolrClient.
+#                           Which URLs To Connect To
+#                           ----- ---- -- ------- --
+# Dependant on which Solr server installation you have, and consequently the
+# SolrJ Client that you use, this will either be a single url, or a comma
+# separated list of URLs
 #
-#   solrj.client=CloudSolrClient
+#     solr.search.server.url - the search server URL to connect to which must
+#         NOT include the core that it is connecting to - this will be taken
+#         care of by the panl request mechanism.
+#
+#         NOTE that if you are using connector that has multiple URLs, then
+#         they MUST be comma separated.
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
+#                      Whether To Enable The Testing URLs
+#                      ------- -- ------ --- ------- ----
 # The panl results viewer url, this is a simple web app which will allow you to
-# test the collections, and the URLs that are generated, including field
+# test the collections and the URLs that are generated, including field
 # inclusion, faceting, querying, and results.
 #
 # If this property does not exist, or if it is set to false, then no results
@@ -64,29 +64,37 @@ solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 # (or perhaps just disallow access to it.)
 #
 # The URI paths are __ALWAYS__
-#    /panl-results-viewer/ - for testing the queries, facets, and results
-#    /panl-results-explainer/ - for explaining LPSE encoded URIs and describing
+#     /panl-results-viewer/ - for testing the queries, facets, and results
+#     /panl-results-explainer/ - for explaining LPSE encoded URIs and describing
 #                               the configuration for the Panl server.
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                ~ ~ ~ * ~ ~ ~
 
 panl.results.testing.urls=true
+
+#                     Whether To Enable Verbose Error Messaging
+#                     ------- -- ------ ------- ----- ---------
+# Whether verbose messaging is turned on for the error (404 / 500) http status
+# messages.
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 panl.status.404.verbose=true
 panl.status.500.verbose=true
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#
-#                           Property File Inclusion
-#                           -------- ---- ---------
-#
+#                      Collection Property File Inclusion
+#                      ---------- -------- ---- ---------
 # Each property file defines a singular collection, with the associated
-# metadata.
-# not strictly necessary, including different files for each of the
-# collections that are available for this solr instance should make it less of
-# a burden with file editing and confusing around the SOLR facets.
+# properties and configuration.  The format of the property is:
 #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#     panl.collection.<collection_name>=<properties_file_location>
+#
+# Where:
+#            <collection_name> is the collection URI path to bind to
+#   <properties_file_location> is the relative location __FROM__ this file of
+#                              the collection.panl.properties configuration file
+#
+#                                ~ ~ ~ * ~ ~ ~
 
 $panl.collections
 
