Updated default properties files

--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -56,12 +56,12 @@
 # First up, the number of characters that are used for encoding of a          #
 # particular parameter must be set.  This number must then also match the     #
 # length of the codes assign to:                                              #
-#     panl.facet.*                                                              #
+#     panl.facet.*                                                            #
 #   panl.field.*                                                              #
 #                                                                             #
 # definitions, else a FATAL encoding error will occur and the server will not #
 # be started.  This defaults to a single character if not set - i.e.          #
-#     panl.lpse.length=1                                                        #
+#     panl.lpse.length=1                                                      #
 #                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
@@ -81,6 +81,16 @@ $panl.lpse.length
 # and in what format.  These are not considered facets, however they do need to
 # be the same size as the panl.lpse.length property above.  These define what
 # the query parameter will be and __MUST NOT__ be the same as any of the facets
+#
+# NOTE: Both the page and numrows parameters may have a prefix and suffix
+#       assigned to them, for example:
+#
+#    panl.param.page.prefix=page-
+#    panl.param.page.suffix=
+#
+#    panl.param.numrows=n
+#    panl.param.numrows.prefix=
+#    panl.param.numrows.suffix=-per-page
 #
 #                                ~ ~ ~ * ~ ~ ~
 
@@ -135,6 +145,9 @@ panl.include.same.number.facets=false
 #    panl.param.query.operand
 #
 # This __MUST__ be either a +, or a -
+#
+# For q.op=OR, use -
+# For q.op=AND, use +
 #
 #                                ~ ~ ~ * ~ ~ ~
 
@@ -316,7 +329,9 @@ $panl.results.fields.firstfive
 #                      Panl Sort Field Configuration
 #                      ---- ---- ----- -------------
 # Below are the fields that are configured to be able to be sorted on, these
-# fields must either be defined as a panl.facet or a panl.field
+# fields must either be defined as a panl.facet or a panl.field and __MUST__ be
+# the Solr field name.
 #
 #                                ~ ~ ~ * ~ ~ ~
+
 panl.sort.fields=
