logging of details

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -310,12 +310,12 @@ panl.name.m=Mechanism Type
 panl.type.m=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="body_shape" "type"="string" "multiValued"="false" />
-panl.facet.B=body_shape
+panl.field.B=body_shape
 panl.name.B=Body Shape
 panl.type.B=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="grip_type" "type"="string" "multiValued"="false" />
-panl.facet.g=grip_type
+panl.field.g=grip_type
 panl.name.g=Grip Type
 panl.type.g=solr.StrField
 
@@ -325,9 +325,9 @@ panl.name.G=Grip Shape
 panl.type.G=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="cap_shape" "type"="string" "multiValued"="false" />
-#panl.facet.c=cap_shape
-#panl.name.c=Cap Shape
-#panl.type.c=solr.StrField
+panl.field.c=cap_shape
+panl.name.c=Cap Shape
+panl.type.c=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="category" "type"="string" "multiValued"="false" />
 panl.facet.C=category
@@ -335,33 +335,33 @@ panl.name.C=Category
 panl.type.C=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="length" "type"="pint" "multiValued"="false" />
-#panl.facet.l=length
-#panl.name.l=Length
-#panl.type.l=solr.IntPointField
+panl.field.l=length
+panl.name.l=Length
+panl.type.l=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="relative_length" "type"="pint" "multiValued"="false" />
-panl.facet.r=relative_length
+panl.field.r=relative_length
 panl.name.r=Relative Length
 panl.type.r=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="diameter" "type"="pint" "multiValued"="false" />
-panl.facet.d=diameter
+panl.field.d=diameter
 panl.name.d=Diameter
 panl.type.d=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" "multiValued"="false" />
-#panl.facet.w=weight
-#panl.name.w=Weight
-#panl.type.w=solr.IntPointField
+panl.field.w=weight
+panl.name.w=Weight
+panl.type.w=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
-panl.facet.R=relative_weight
+panl.field.R=relative_weight
 panl.name.R=Relative Weight
 panl.type.R=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="lead_length" "type"="pint" "multiValued"="false" />
 panl.facet.L=lead_length
-panl.name.L=Lead Length
+panl.name.L=Maximum Allowed Lead Length
 panl.type.L=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" "multiValued"="false" />
@@ -373,14 +373,14 @@ panl.bool.D.true=able to be disassembled
 panl.bool.D.false=cannot be disassembled
 
 # <field "indexed"="true" "stored"="true" "name"="mechanism_material" "type"="string" "multiValued"="false" />
-#panl.facet.M=mechanism_material
-#panl.name.M=Mechanism Material
-#panl.type.M=solr.StrField
+panl.field.M=mechanism_material
+panl.name.M=Mechanism Material
+panl.type.M=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="tubing_material" "type"="string" "multiValued"="false" />
-#panl.facet.t=tubing_material
-#panl.name.t=Tubing Material
-#panl.type.t=solr.StrField
+panl.field.t=tubing_material
+panl.name.t=Tubing Material
+panl.type.t=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="hardness_indicator" "type"="string" "multiValued"="false" />
 panl.facet.h=hardness_indicator
@@ -392,43 +392,43 @@ panl.facet.I=in_built_eraser
 panl.name.I=In Built Eraser
 panl.type.I=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.I.true=is-in_built_eraser
-panl.bool.I.false=is-not-in_built_eraser
+#panl.bool.I.true=true
+#panl.bool.I.false=false
 
 # <field "indexed"="true" "stored"="true" "name"="variants" "type"="string" "multiValued"="true" />
-#panl.facet.v=variants
-#panl.name.v=Variants
-#panl.type.v=solr.StrField
+panl.field.v=variants
+panl.name.v=Variants
+panl.type.v=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="nib_shape" "type"="string" "multiValued"="false" />
-panl.facet.e=nib_shape
+panl.field.e=nib_shape
 panl.name.e=Nib Shape
 panl.type.e=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="nib_material" "type"="string" "multiValued"="false" />
-#panl.facet.x=nib_material
-#panl.name.x=Nib Material
-#panl.type.x=solr.StrField
+panl.field.x=nib_material
+panl.name.x=Nib Material
+panl.type.x=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="grip_material" "type"="string" "multiValued"="false" />
-#panl.facet.X=grip_material
-#panl.name.X=Grip Material
-#panl.type.X=solr.StrField
+panl.field.X=grip_material
+panl.name.X=Grip Material
+panl.type.X=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="body_material" "type"="string" "multiValued"="false" />
-#panl.facet.K=body_material
-#panl.name.K=Body Material
-#panl.type.K=solr.StrField
+panl.field.K=body_material
+panl.name.K=Body Material
+panl.type.K=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="clip_material" "type"="string" "multiValued"="false" />
-#panl.facet.A=clip_material
-#panl.name.A=Clip Material
-#panl.type.A=solr.StrField
+panl.field.A=clip_material
+panl.name.A=Clip Material
+panl.type.A=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="cap_material" "type"="string" "multiValued"="false" />
-#panl.facet.f=cap_material
-#panl.name.f=Cap Material
-#panl.type.f=solr.StrField
+panl.field.f=cap_material
+panl.name.f=Cap Material
+panl.type.f=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="lead_grade_indicator" "type"="string" "multiValued"="false" />
 panl.facet.u=lead_grade_indicator
@@ -445,8 +445,8 @@ panl.facet.9=in_built_sharpener
 panl.name.9=In Built Sharpener
 panl.type.9=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.9.true=is-in_built_sharpener
-panl.bool.9.false=is-not-in_built_sharpener
+panl.bool.9.true=Has in-built sharpener
+panl.bool.9.false=No in-built sharpener
 
 # <field "indexed"="true" "stored"="true" "name"="colours" "type"="string" "multiValued"="true" />
 panl.facet.W=colours
@@ -478,7 +478,7 @@ panl.type.W=solr.StrField
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,s,p,n,o,q
+panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,s,p,n,o,q
 
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
