renamed panlLpseCode -> lpseCode and accessor name

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -323,6 +323,7 @@ panl.type.g=solr.StrField
 panl.facet.G=grip_shape
 panl.name.G=Grip Shape
 panl.type.G=solr.StrField
+panl.suffix.G=\ Grip
 
 # <field "indexed"="true" "stored"="true" "name"="cap_shape" "type"="string" "multiValued"="false" />
 panl.field.c=cap_shape
@@ -350,9 +351,11 @@ panl.name.d=Diameter
 panl.type.d=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" "multiValued"="false" />
-panl.field.w=weight
+panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
+panl.suffix.w=\ grams
+panl.range.w=auto
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
@@ -363,6 +366,7 @@ panl.type.R=solr.IntPointField
 panl.facet.L=lead_length
 panl.name.L=Maximum Allowed Lead Length
 panl.type.L=solr.IntPointField
+panl.suffix.L=mm
 
 # <field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" "multiValued"="false" />
 panl.facet.D=disassemble
@@ -478,7 +482,7 @@ panl.type.W=solr.StrField
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,s,p,n,o,q
+panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,s,p,n,o,q
 
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
