Range faceting back-end processing and genartion or URI paths

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -355,7 +355,13 @@ panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
 panl.suffix.w=\ grams
-panl.range.w=auto
+
+panl.range.w=true
+panl.range.min.w=0
+panl.range.max.w=20
+panl.range.prefix.w=from 
+panl.range.midfix.w=-to-
+panl.range.suffix.w=\ grams
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
