Fixed bug with parsing boolean replacement fields with a suffix.
Updated the schema to non-analysed fields

renamed property from panl.range.<lpse_code> to panl.range.facet.<lpse_code>

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -189,7 +189,7 @@ solr.facet.limit=100
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.facet.min.count=1
+solr.facet.min.count=0
 
 #               The Default Number of Rows (Documents) To Return
 #               --- ------- ------ -- ---- ----------- -- ------
@@ -293,11 +293,12 @@ panl.type.i=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
 panl.facet.b=brand
-panl.or.facet.b=false
+panl.or.facet.b=true
+#panl.range.facet.b=false
 panl.name.b=Brand
 panl.type.b=solr.StrField
-panl.prefix.b=Manufactured by 
-panl.suffix.b=\ Company
+#panl.prefix.b=Manufactured by
+#panl.suffix.b=\ Company
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
 panl.field.N=name
@@ -356,7 +357,7 @@ panl.name.w=Weight
 panl.type.w=solr.IntPointField
 panl.suffix.w=\ grams
 
-panl.range.w=true
+panl.range.facet.w=true
 panl.range.min.w=0
 panl.range.max.w=20
 panl.range.prefix.w=from 
@@ -379,8 +380,9 @@ panl.facet.D=disassemble
 panl.name.D=Disassemble
 panl.type.D=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.D.true=able to be disassembled
-panl.bool.D.false=cannot be disassembled
+panl.bool.D.true=able to be
+panl.bool.D.false=cannot be
+panl.suffix.D=\ disassembled
 
 # <field "indexed"="true" "stored"="true" "name"="mechanism_material" "type"="string" "multiValued"="false" />
 panl.field.M=mechanism_material
