Refactored packages, start of LPSE tokenising

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -293,12 +293,12 @@ panl.type.i=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
 panl.facet.b=brand
-panl.or.facet.b=true
+panl.or.facet.b=false
 #panl.range.facet.b=false
 panl.name.b=Brand
 panl.type.b=solr.StrField
-#panl.prefix.b=Manufactured by
-#panl.suffix.b=\ Company
+panl.prefix.b=Manufactured by
+panl.suffix.b=\ Company
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
 panl.field.N=name
@@ -363,6 +363,8 @@ panl.range.max.w=20
 panl.range.prefix.w=from 
 panl.range.midfix.w=-to-
 panl.range.suffix.w=\ grams
+panl.range.min.value.w=nothing
+panl.range.max.value.w=a lot
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
