Added in tokenising of range facet

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -361,7 +361,7 @@ panl.range.facet.w=true
 panl.range.min.w=0
 panl.range.max.w=20
 panl.range.prefix.w=from 
-panl.range.midfix.w=-to-
+panl.range.midfix.w=\ to 
 panl.range.suffix.w=\ grams
 panl.range.min.value.w=nothing
 panl.range.max.value.w=a lot
@@ -517,7 +517,7 @@ panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,s,p,n,o,q
 
 panl.results.fields.all=brand,name,mechanism_type,nib_shape,body_shape,grip_type,grip_shape,cap_shape,category,length,relative_length,diameter,weight,relative_weight,lead_length,disassemble,nib_material,mechanism_material,grip_material,body_material,tubing_material,clip_material,cap_material,hardness_indicator,lead_grade_indicator,lead_size_indicator,colours,variants
 
-panl.results.fields.firstfive=brand,name,category,mechanism_type,nib_shape
+panl.results.fields.firstfive=brand,name,category,mechanism_type,weight
 
 #                      Panl Sort Field Configuration
 #                      ---- ---- ----- -------------
