Added in canonical URI Path and LPSE code generation

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -360,11 +360,11 @@ panl.suffix.w=\ grams
 panl.range.facet.w=true
 panl.range.min.w=0
 panl.range.max.w=20
-panl.range.prefix.w=from 
+panl.range.prefix.w=weighing from 
 panl.range.midfix.w=\ to 
 panl.range.suffix.w=\ grams
 panl.range.min.value.w=nothing
-panl.range.max.value.w=a lot
+panl.range.max.value.w=a lot of 
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
