Fixed tokenising bug with decrementing.  Refactored packages.  Added Correct URIs.  Added encode value of active facets,

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -189,7 +189,7 @@ solr.facet.limit=100
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.facet.min.count=0
+solr.facet.min.count=1
 
 #               The Default Number of Rows (Documents) To Return
 #               --- ------- ------ -- ---- ----------- -- ------
@@ -294,10 +294,10 @@ panl.type.i=solr.StrField
 # <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
 panl.facet.b=brand
 panl.or.facet.b=false
-#panl.range.facet.b=false
+panl.range.facet.b=false
 panl.name.b=Brand
 panl.type.b=solr.StrField
-panl.prefix.b=Manufactured by
+panl.prefix.b=Manufactured by 
 panl.suffix.b=\ Company
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
@@ -356,15 +356,14 @@ panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
 panl.suffix.w=\ grams
-
 panl.range.facet.w=true
-panl.range.min.w=0
-panl.range.max.w=20
+panl.range.min.w=10
+panl.range.max.w=50
 panl.range.prefix.w=weighing from 
 panl.range.midfix.w=\ to 
 panl.range.suffix.w=\ grams
-panl.range.min.value.w=nothing
-panl.range.max.value.w=a lot of 
+panl.range.min.value.w=light
+panl.range.max.value.w=a lot of
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
